# PASsistant

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
docs/: architecture.md  deployment.md  evaluation.md  retrieval-pipeline.md
scripts/: build_ragas_dataset.py  bump_version.sh  run_qdrant.sh  run_retrieval_smoke_test.py  setup.sh
src/: __init__.py  __version__.py  agent.py
src/api/: __init__.py  helpers.py  models.py  services.py  sessions.py
src/api/routes/: __init__.py  chat.py  documents.py  health.py  router.py  telegram.py  websocket.py
src/config/: __init__.py  logging.py  settings.py
src/eval/: __init__.py  ragas_eval.py
src/eval/ragas/: __init__.py  __main__.py  cli.py  data.py  evaluator.py  models.py  reporting.py
src/graphs/: __init__.py  workflow.py
src/guardrails/: __init__.py  input_guard.py  output_guard.py  rate_limit.py
src/services/: __init__.py  contracts.py  document_processing.py  ingestion_health.py  intent.py  response_generation.py  session_registry.py  student_records.py
src/telegram_bot/: __init__.py  adapter.py  files.py  formatting.py  polling.py
src/utils/: __init__.py  cache.py  state.py
src/utils/nodes/: __init__.py  document_processing.py  error_handler.py  llm.py  response.py  retrieval.py  router.py  student_record.py
src/utils/nodes/prompts/: __init__.py  response.py  retrieval.py  router.py  student_record.py
src/utils/tools/: __init__.py  document.py  hierarchical_chunking.py  ocr.py  parent_store.py  student.py  vector_store.py
src/utils/vector_store/: __init__.py  bm25.py  collection.py  indexing.py  reranker.py  search.py  tools.py
tests/: conftest.py  test_api.py  test_guardrails.py  test_hierarchical_retrieval.py  test_llm.py  test_logging_config.py  test_prod_readiness.py  test_ragas_eval.py  test_telegram_adapter.py  test_telegram_webhook.py  test_tools.py  test_websocket.py  test_workflow.py
tests/fixtures/: 1.2.jsonl  ragas_dataset.jsonl  ragas_dataset_15.jsonl  ragas_dataset_kurikulum_if_unpas.jsonl  ragas_dataset_pedoman_kemahasiswaan.jsonl  ragas_dataset_template.jsonl  ragas_eval_dataset.jsonl
