[project]
name = "passistant"
version = "0.1.0"
description = "LangGraph-powered chatbot for academic services and student records with OCR, RAG, and Qdrant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ksma Lnang", email = "ksmalnang@gmail.com"}
]
keywords = ["passistant", "langgraph", "chatbot", "student-records", "academic-services", "rag", "qdrant", "ocr"]

dependencies = [
    "aiofiles>=24.1.0",
    "langgraph==1.1.9",
    "langchain-core==1.3.2",
    "langchain-openai==1.2.1",
    "qdrant-client[fastembed]>=1.17.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "python-multipart>=0.0.26",
    "redis>=6.4.0",
    "tenacity>=9.0.0",
    "zai-sdk>=0.2.2",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
chatbot = "src.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff Configuration ---
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP045"]
unfixable = ["F841", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest Configuration ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# --- MyPy Configuration ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
